[tool.poetry]
name = "twinlab"
version = "0.2.0"
description = "Designing and building digital twins"
authors = ["Freddy Wordingham", "Mikkel Lykkegaard", "Tim Dodwell"]

[tool.poetry.dependencies]
botorch = "^0.7.2"
gpytorch = "^1.9.0"
jupyter = "^1.0.0"
laplace-torch = "^0.1a2"
matplotlib = "^3.5.3"
numpy = "^1.23.3"
pandas = "^1.4.4"
pdoc = "^12.1.0"
pydoctor = "^22.7.0"
python = ">=3.8,<3.12"
pytorch-lightning = "^1.7.7"
scipy = "^1.9.1"
sklearn = "^0.0"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
nbmake = "^1.3.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
